[package]
name = "libschema"
version = "0.1.0"
authors = [ "NAHFE", "Not4x3l" ]
description = "Rust library for skola24 schemas"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.6", features = [ "json" ] }
chrono = "0.4.19"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.10.0", features = ["async-attributes"] }
async-attributes = "1.1.2"
cacache = "10.0.1"
xdg = "2.4.1"

svg = { version = "0.10", optional = true }
